# transcript

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  Cargo.toml  MEMORY.md  README.md  Trunk.toml  index.html  justfile  tailwind.css
docs/: mode_bundling.md  prerequisites.md  requirements.md  roadmap.md  tasks.md  technical_architecture.md  user_flow.md
docs/ui_wireframes/: index.md  transcript_wireframes_poc.html
docs/ui_wireframes/home/: index.md  transcript_file_preview_screen.html  transcript_home_screen.html
docs/ui_wireframes/model_manager/: index.md  transcript_model_manager_screen.html
docs/ui_wireframes/settings/: index.md  transcript_settings_screen.html
docs/ui_wireframes/transcript/: index.md  transcript_view_screen.html
docs/ui_wireframes/transcription/: index.md  transcript_transcription_screen.html
models/: registry.toml
scripts/dev-helper/: Cargo.toml
scripts/dev-helper/src/: main.rs
src/: AGENTS.md  app.rs  main.rs
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/resources/onnx/: vibevoice_acoustic.onnx  vibevoice_semantic.onnx
src-tauri/src/: lib.rs  main.rs
src-tauri/src/asr/: acoustic.rs  decoder.rs  mod.rs  pipeline.rs  semantic.rs  whisper.rs
src-tauri/src/audio/: decoder.rs
src-tauri/src/commands/: audio.rs  export.rs  hardware.rs  mod.rs  models.rs  settings.rs  transcribe.rs
src-tauri/src/export/: mod.rs
src-tauri/src/models/: mod.rs  registry.rs
src/components/: app_ui.rs  drop_zone.rs  icons.rs  live_segment_list.rs  mod.rs  progress_bar.rs  sidebar.rs  workspace.rs
src/features/: mod.rs  shared.rs  workspace_data.rs
src/features/intake/: mod.rs
src/features/preview/: mod.rs  service.rs
src/features/transcript/: mod.rs  service.rs
src/features/transcription/: mod.rs  service.rs
src/pages/: file_preview.rs  home.rs  mod.rs  model_manager.rs  settings.rs  transcript_view.rs  transcription.rs
src/state/: app_state.rs
