[package]
name    = "transcript-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI
leptos        = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos-use    = "0.15"

# Tauri bridge — via wasm-bindgen direct (tauri-sys not on crates.io)
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2" }

# Serialization / WASM
serde                = { version = "1", features = ["derive"] }
serde-wasm-bindgen   = "0.6"
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"

# Error handling
anyhow = "1"