[package]
name    = "transcript-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI
leptos = { version = "0.8.17", features = ["csr"] }
leptos_router = "0.8.12"
leptos-use = "0.18.3"
leptos_darkmode = "0.3"
singlestage = "0.4"

# Tauri bridge — via wasm-bindgen direct (tauri-sys not on crates.io)
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = ["all"] }

# Serialization / WASM
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.81", features = ["Clipboard", "Document", "Element", "HtmlElement", "Navigator", "Window"] }

# Error handling
anyhow = "1.0.102"
