[package]
name        = "app"
version     = "0.1.0"
description = "Transcript — offline-first audio transcription"
authors     = ["MiicaLabs"]
license     = "Apache-2.0"
edition = "2024"
rust-version = "1.88.0"

[lib]
name = "transcript_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ASR Runtime
ort     = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
ndarray = "0.17.2"

# Whisper fallback
whisper-rs = "0.16.0"

# Audio
symphonia = { version = "0.5", features = ["mp3", "wav", "aac"] }

# Hardware detection
sysinfo = "0.38.4"

# HTTP / Download
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
sha2    = "0.10"

# Serialization
toml = "0.8"

# Async
tokio   = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow    = "1"
thiserror = "1"

# Logging
log                = "0.4"
tauri-plugin-log   = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Filesystem
dirs = "6.0.0"

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
